<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.glenngoossens.instaclone.MainActivity">

    <ImageView
        app:srcCompat="@drawable/instagramlogo"
        android:id="@+id/imageViewLogo"
        android:cropToPadding="false"
        android:contentDescription="@string/instagramlogo"
        android:layout_width="125dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="125dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameEditText"
        app:layout_constraintRight_toRightOf="@+id/imageViewLogo"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintLeft_toLeftOf="@+id/imageViewLogo"
        android:hint="@string/username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        app:layout_constraintRight_toRightOf="@+id/imageViewLogo"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintLeft_toLeftOf="@+id/imageViewLogo"
        android:hint="@string/password" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpButton"
        app:layout_constraintRight_toRightOf="@+id/usernameEditText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintLeft_toLeftOf="@+id/usernameEditText"
        android:onClick="signUpOrLogIn" />

    <TextView
        android:text="@string/or_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeSignUpMode"
        app:layout_constraintRight_toRightOf="@+id/signUpButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintLeft_toLeftOf="@+id/signUpButton"
        android:textColor="@color/colorPrimary" />
</android.support.constraint.ConstraintLayout>
